# lit-junkie

./: LICENSE  README.md  pyproject.toml  requirements.txt  runner.py
lit_junkie/: core.py  logo.py  paths.py  prompt.py  schemas.py  search.py  storage.py  views.py
tests/: common.py  test_assets.py  test_schemas.py  test_search.py  test_storage.py
tests/data/: good_search_result_one.json  response.json  serialized.json
