[tool.poetry]
name = "lit-junkie"
version = "0.1.0"
description = "The first step is admitting you have an addiction to reading."
authors = ["dgnsrekt <dgnsrekt@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
pytest-watch = "^4.2.0"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
